--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf dist && webpack --config webpack/webpack.prod.js",
     "bundle": "npm run build",
     "serve-window": "SET PORT=8120 && serve dist",
-    "serve": "serve dist -p 8120"
+    "serve": "serve dist -p 8120",
+    "android": "npx cap run android"
   },
   "engines": {
     "node": ">=12"
@@ -18,6 +19,10 @@
     "phaser": "^3.55.2"
   },
   "devDependencies": {
+    "@capacitor/android": "^3.3.4",
+    "@capacitor/cli": "^3.3.4",
+    "@capacitor/core": "^3.3.4",
+    "@capacitor/status-bar": "^1.0.6",
     "copy-webpack-plugin": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
     "javascript-obfuscator": "^3.0.0",
